# sterm

./: .gitignore  CMakeLists.txt  LICENSE  build-date.py  build-info.py
src/: ITerminal.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PlainTextTerminal.cpp  PlainTextTerminal.hpp  SelectPortDialog.cpp  SelectPortDialog.hpp  SelectPortDialog.ui  Settings.Linux.cpp  Settings.cpp  Settings.hpp  TerminalBase.cpp  TerminalBase.hpp  Version.cpp  Version.hpp  main.cpp
